# linapy

./: .flake8  .gitignore  LICENSE  README.md  main.py  meson.build  mypy.ini  pytest.ini
.github/workflows/: test-cpp.yml  test-python.yml
docs/research/: mkdocs.yml
docs/research/docs/libraries/: numpy.md
documentation/: Phases.md  mkdocs.yml
documentation/docs/: Phases.md  Test.md  index.md
documentation/docs/development/: Phase1.md  development.md
linapy/: bindings.cpp  main.cpp  main.py
linapy/_build_utils/: getversion.py
linapy/core/: matrix_operations.cpp  matrix_operations.hpp
linapy/include/: matrix_utils.hpp  types.hpp
linapy/lina_types/: Array.cpp  Array.hpp  Matrix.cpp  Matrix.hpp  Vector.cpp  Vector.hpp  __init__.py  array.py  matrix.py  vector.py
linapy/utils/: matrix_utils.cpp  matrix_utils.hpp
requirements/: dev-requirements.txt  doc-requirements.txt  test-requirements.txt
tests/: CMakeLists.txt
tests/test_linapy_types/: test_array.cpp  test_array.py  test_matrix.cpp  test_matrix.py  test_vector.cpp  test_vector.py
